deployed on android

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,8 +1,8 @@
-<ion-content class="login-content" padding>
-  <ion-row class="logo-row">
+<ion-content class="login-content getstart" padding style="background-image: url('../../assets/imgs/back.png')">
+  <ion-row class="logo-row" style="height:150px">
     <ion-col></ion-col>
     <ion-col width-67>
-      <img src="../../assets/imgs/logo.png"/>
+      <!-- <img src="../../assets/imgs/logo.png"/> -->
     </ion-col>
     <ion-col></ion-col>
   </ion-row>
