--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,12 +6,11 @@
     </ion-col>
     <ion-col></ion-col>
   </ion-row>
-  <div class="login-box">
-    <form (ngSubmit)="login()" #registerForm="ngForm">
+  <div style="margin-top: 110px">
+    <form (ngSubmit)="loginUser()" #registerForm="ngForm">
       <ion-row>
         <ion-col>
           <ion-list inset>
-            
             <ion-item>
               <ion-input type="text" placeholder="Email" name="email" [(ngModel)]="registerCredentials.email" required (change)="loginFaill=false"></ion-input>
             </ion-item>
